apps/app-proxy/overlays/codefreshtest2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: codefreshtest2-cap-app-proxy
  namespace: codefreshtest2
spec:
  ingressClassName: nginx
  rules:
  - host: ad2661d85addd45a88a7770654d1673b-1836621158.ap-south-1.elb.amazonaws.com
    http:
      paths:
      - backend:
          service:
            name: cap-app-proxy
            port:
              number: 3017
        path: /app-proxy
        pathType: Prefix
